# templates

aosp/exe/: Android.mk  main.c
autotools/hello_bin/: README.md  configure.ac
c/exe/: Makefile
c/project/: Makefile
c/project/src/: main.c
cmake/basics/exe/: CMakeLists.txt
cmake/boost/asio/helloUdpServer/: CMakeLists.txt  build.sh  helloUdpServer.cpp  udp_client.sh
cpp/project/: Makefile  README.md
cpp/project/src/: main.cpp
dbus/low-level/: CMakeLists.txt  README.md  astyle.param  build.sh
dbus/low-level/client/: CMakeLists.txt  client.c
dbus/low-level/server/: CMakeLists.txt  server.c  test.sh
legato-af/apps/hello/: Makefile  README.md  hello.adef
legato-af/apps/hello/helloComponent/: Component.cdef  README.md  hello.c
